tests/parser/pass/arithmetic_2.c
struct ab{
    int kk;
};

int main(){ 
    int foo;
    struct ab abb;
    char* bar;
    a=*a***b;
    sizeof(char)<=b*3;
    foo = sizeof(char*) + 10 * 20 / 120 >= 3 - *bar % 93 - (char)a && foo + abb.kk; 
} 
