tests/parser/error/block_order_1.c
void main() {
    if (asdf) {}
    int a;
    int b=3;
}